# motion_detector

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
croper/: CMakeLists.txt  video_cropper.cpp
moution_detector/: markCreator.cpp  markCreator.h  motion_detector.cpp
